--- a/4_Problems/1_04_Strings.ipynb
+++ b/4_Problems/1_04_Strings.ipynb
@@ -20,13 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ed154db0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DATA SCIENTIST'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_title = 'data scientist'"
+    "job_title = 'data scientist'\n",
+    "job_title.upper()"
    ]
   },
   {
@@ -47,13 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9088a3fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data Engineer'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_title = 'Data Analyst'"
+    "job_title = 'Data Analyst'\n",
+    "job_title.replace('Analyst', 'Engineer')"
    ]
   },
   {
@@ -74,14 +98,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1c7fb9f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Senior Data Analyst'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "seniority_level = 'Senior'\n",
-    "job_title = 'Data Analyst'"
+    "job_title = 'Data Analyst'\n",
+    "seniority_level + ' ' + job_title"
    ]
   },
   {
@@ -102,13 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9f81d0d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_title = 'Data Scientist'"
+    "job_title = 'Data Scientist'\n",
+    "print(len(job_title))"
    ]
   },
   {
@@ -129,13 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "74a3336c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data engineer\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_title = 'DATA ENGINEER'"
+    "job_title = 'DATA ENGINEER'\n",
+    "print(job_title.lower())"
    ]
   },
   {
@@ -154,7 +208,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
