--- a/4_Problems/1_05_String Formatting.ipynb
+++ b/4_Problems/1_05_String Formatting.ipynb
@@ -20,13 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f5eb44b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J0b Title: Data Scientist\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_title = 'Data Scientist'"
+    "job_title = 'Data Scientist'\n",
+    "print('J0b Title:' +' '+ job_title)"
    ]
   },
   {
@@ -47,14 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f1dd6630",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data Scientist at DataWiz Inc.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "position = 'Data Scientist'\n",
-    "company = 'DataWiz Inc.'"
+    "company = 'DataWiz Inc.'\n",
+    "f'{position} at {company}'"
    ]
   },
   {
@@ -75,14 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3ad6287a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Role: Data Analyst; Skill: Python'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "role = 'Data Analyst'\n",
-    "skill = 'Python'"
+    "skill = 'Python'\n",
+    "'Role: {}; Skill: {}'.format(role, skill)"
    ]
   },
   {
@@ -103,14 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "88cfb9fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Role: Data Engineer; Skill: SQL'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "role = 'Data Engineer'\n",
-    "skill = 'SQL'"
+    "skill = 'SQL'\n",
+    "'Role: %s; Skill: %s' %(role,skill)"
    ]
   },
   {
@@ -122,7 +167,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
