--- a/4_Problems/1_14_List Comprehensions.ipynb
+++ b/4_Problems/1_14_List Comprehensions.ipynb
@@ -20,13 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9bf35e2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[85000.0, 102000.0, 68000.0, 76500.0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "salaries_usd = [100000, 120000, 80000, 90000]"
+    "salaries_usd = [100000, 120000, 80000, 90000]\n",
+    "salaries_eur=[x*0.85 for x in salaries_usd]\n",
+    "print(salaries_eur)"
    ]
   },
   {
@@ -50,10 +60,28 @@
    "execution_count": null,
    "id": "9bbcdc8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data Scientist', 'Machine Learning Specialist']\n",
+      "['Data Scientist', 'Machine Learning Specialist']\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_experience = {'Data Scientist': 3, 'Data Analyst': 1, 'Machine Learning Specialist': 4, 'Data Engineer': 2}"
+    "job_experience = {'Data Scientist': 3, 'Data Analyst': 1, 'Machine Learning Specialist': 4, 'Data Engineer': 2}\n",
+    "job_titles=[]\n",
+    "for title, experience in job_experience.items():\n",
+    "    if experience>2:\n",
+    "        job_titles.append(title)\n",
+    "print(job_titles)\n",
+    "\n",
+    "job_titles=[title for title,experience in job_experience.items() if experience>2]\n",
+    "\n",
+    "print(job_titles)\n"
    ]
   },
   {
@@ -77,10 +105,30 @@
    "execution_count": null,
    "id": "c3d8887b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data Scientist', 'Data Analyst']\n",
+      "['Data Scientist', 'Data Analyst']\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_salary_dicts = [{'job_title': 'Data Scientist', 'salary': 100000}, {'job_title': 'Data Analyst', 'salary': 120000}, {'job_title': 'Data Engineer', 'salary': 80000}, {'job_title': 'Machine Learning Engineer', 'salary': 90000}]"
+    "job_salary_dicts = [{'job_title': 'Data Scientist', 'salary': 100000}, {'job_title': 'Data Analyst', 'salary': 120000}, {'job_title': 'Data Engineer', 'salary': 80000}, {'job_title': 'Machine Learning Engineer', 'salary': 90000}]\n",
+    "\n",
+    "high_salary_jobs=[]\n",
+    "for i in job_salary_dicts:\n",
+    "    if i['salary']>90000:\n",
+    "        high_salary_jobs.append(i['job_title'])\n",
+    "print(high_salary_jobs)\n",
+    "\n",
+    "\n",
+    "\n",
+    "high_salary_jobs=[i['job_title'] for i in job_salary_dicts if i['salary']>90000]\n",
+    "print(high_salary_jobs)"
    ]
   },
   {
@@ -92,7 +140,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
