--- a/4_Problems/1_06_Operators Part 1.ipynb
+++ b/4_Problems/1_06_Operators Part 1.ipynb
@@ -20,13 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5eae247",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96000\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "monthly_salary = 8000"
+    "monthly_salary = 8000\n",
+    "Annual_Salary = monthly_salary*12\n",
+    "print(Annual_Salary)"
    ]
   },
   {
@@ -47,14 +57,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d74e5eec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "avg_salary_analyst = 70000\n",
-    "avg_salary_scientist = 85000"
+    "avg_salary_scientist = 85000\n",
+    "avg_salary_analyst > avg_salary_scientist"
    ]
   },
   {
@@ -75,14 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "97e2ce73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "total_applications = 123\n",
-    "job_openings = 67"
+    "job_openings = 67\n",
+    "remainder = total_applications%job_openings\n",
+    "print(remainder)"
    ]
   },
   {
@@ -103,13 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c05ce14e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_postings = 20"
+    "job_postings = 20\n",
+    "job_postings += 5\n",
+    "print(job_postings)"
    ]
   },
   {
@@ -130,14 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c5bb9dc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85000.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "min_salary = 50000\n",
-    "max_salary = 120000"
+    "max_salary = 120000\n",
+    "average_salary=(min_salary+max_salary)/2\n",
+    "print(average_salary)"
    ]
   },
   {
@@ -150,8 +202,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
