--- a/4_Problems/1_07_Conditional Statements.ipynb
+++ b/4_Problems/1_07_Conditional Statements.ipynb
@@ -20,13 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9eaa2dc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intemediate\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "python_experience = 3"
+    "python_experience = 3\n",
+    "if python_experience<2:\n",
+    "    print('Beginner')\n",
+    "else:\n",
+    "    print('Intemediate')"
    ]
   },
   {
@@ -47,13 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb543cdd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intermediate\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "tools_known = 3"
+    "tools_known = 3\n",
+    "if tools_known>0 and tools_known<=1:\n",
+    "    job_skill_level = 'Beginner'\n",
+    "elif tools_known>2 and tools_known<=4:\n",
+    "    job_skill_level = 'Intermediate'\n",
+    "else:\n",
+    "    job_skill_level = 'Advanced'\n",
+    "print(job_skill_level)"
    ]
   },
   {
@@ -74,14 +101,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f73925e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Senior Analyst\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "job_experience = 4\n",
-    "sql_experience = 2"
+    "sql_experience = 2\n",
+    "if job_experience<=2:\n",
+    "    if sql_experience<=0:\n",
+    "        job_title='Associate Analyst'\n",
+    "    else:\n",
+    "        job_title='Junior Analyst'\n",
+    "elif job_experience<=5:\n",
+    "    if sql_experience<=0:\n",
+    "        job_title='Associate Analyst'\n",
+    "    elif sql_experience<=1:\n",
+    "        job_title='Intermediate Analyst'\n",
+    "    else:\n",
+    "        job_title='Senior Analyst'\n",
+    "else:\n",
+    "    if sql_experience<=2:\n",
+    "        job_title='Data Analyst'\n",
+    "    else:\n",
+    "        job_title='Lead Analyst'\n",
+    "print(job_title)"
    ]
   },
   {
@@ -91,9 +144,74 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7484ce50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Senior Analyst\n"
+     ]
+    }
+   ],
+   "source": [
+    "job_experience = 4\n",
+    "sql_experience = 2\n",
+    "\n",
+    "if job_experience < 2:\n",
+    "    if sql_experience == 0:\n",
+    "        job_title = \"Associate Analyst\"\n",
+    "    else:\n",
+    "        job_title = \"Junior Analyst\"\n",
+    "elif job_experience > 5:\n",
+    "    if sql_experience >= 3:\n",
+    "        job_title = \"Lead Analyst\"\n",
+    "    else:\n",
+    "        job_title = \"Data Analyst\"\n",
+    "else:  # 2 to 5 years of experience\n",
+    "    if sql_experience == 0:\n",
+    "        job_title = \"Associate Analyst\"\n",
+    "    elif sql_experience == 1:\n",
+    "        job_title = \"Intermediate Analyst\"\n",
+    "    else:\n",
+    "        job_title = \"Senior Analyst\"\n",
+    "\n",
+    "print(job_title) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f3d279",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
