--- a/4_Problems/1_08_Lists.ipynb
+++ b/4_Problems/1_08_Lists.ipynb
@@ -20,13 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1985369d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Analyst\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "print(job_titles[1])"
    ]
   },
   {
@@ -47,13 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ec22c646",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data Scientist', 'Data Analyst', 'AI Specialist']\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "job_titles[2]='AI Specialist'\n",
+    "print(job_titles)"
    ]
   },
   {
@@ -74,13 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6e2440ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data Scientist', 'Data Analyst']\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer', 'Data Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer', 'Data Engineer']\n",
+    "first_two_job_titles=job_titles[:2]\n",
+    "print(first_two_job_titles)"
    ]
   },
   {
@@ -101,13 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fa121574",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data Scientist', 'Data Analyst', 'Machine Learning Engineer', 'Data Engineer']\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "job_titles.append('Data Engineer')\n",
+    "print(job_titles)"
    ]
   },
   {
@@ -128,13 +167,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "82ac8332",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data Scientist', 'Business Analyst', 'Data Analyst', 'Machine Learning Engineer']\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "job_titles.insert(1,'Business Analyst')\n",
+    "print(job_titles)"
    ]
   },
   {
@@ -146,7 +195,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
