--- a/4_Problems/1_09_Dictionaries.ipynb
+++ b/4_Problems/1_09_Dictionaries.ipynb
@@ -20,13 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c94b145c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_postings = {'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50}"
+    "job_postings = {'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50}\n",
+    "print(job_postings['Data Analyst'])"
    ]
   },
   {
@@ -47,13 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e142f46f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50, 'AI Specialist': 30}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_postings = {'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50}"
+    "job_postings = {'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50}\n",
+    "job_postings['AI Specialist']=30\n",
+    "print(job_postings)"
    ]
   },
   {
@@ -74,13 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3e97c9cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Data Scientist': 120, 'Data Analyst': 80}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_postings = {'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50}"
+    "job_postings = {'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50}\n",
+    "job_postings.pop('Machine Learning Engineer')\n",
+    "print(job_postings)"
    ]
   },
   {
@@ -101,14 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d2fd3ae2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Data Scientist': 120, 'Data Analyst': 80, 'Machine Learning Engineer': 50, 'AI Specialist': 30}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "job_postings1 = {'Data Scientist': 120, 'Data Analyst': 80}\n",
-    "job_postings2 = {'Machine Learning Engineer': 50, 'AI Specialist': 30}"
+    "job_postings2 = {'Machine Learning Engineer': 50, 'AI Specialist': 30}\n",
+    "job_postings1.update(job_postings2)\n",
+    "print(job_postings1)"
    ]
   },
   {
@@ -129,11 +168,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b5acf180",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Data Scientist': {'postings': 120, 'average_salary': 120000}, 'Data Analyst': {'postings': 80, 'average_salary': 80000}, 'Machine Learning Engineer': {'postings': 50, 'average_salary': 110000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "job_details={\n",
+    "    'Data Scientist':{\n",
+    "        'postings':120,\n",
+    "        'average_salary':120000\n",
+    "    },\n",
+    "    'Data Analyst':{\n",
+    "        'postings':80,\n",
+    "        'average_salary':80000\n",
+    "    },\n",
+    "    'Machine Learning Engineer':{\n",
+    "        'postings':50,\n",
+    "        'average_salary':110000\n",
+    "    }\n",
+    "}\n",
+    "print(job_details)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +207,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
