--- a/4_Problems/1_10_Sets.ipynb
+++ b/4_Problems/1_10_Sets.ipynb
@@ -20,13 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6fb688cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AI Specialist', 'Data Scientist', 'Machine Learning Engineer', 'Data Analyst'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "unique_job_titles = {'Data Scientist', 'Data Analyst', 'Machine Learning Engineer'}"
+    "unique_job_titles = {'Data Scientist', 'Data Analyst', 'Machine Learning Engineer'}\n",
+    "unique_job_titles.add('AI Specialist')\n",
+    "print(unique_job_titles)"
    ]
   },
   {
@@ -47,13 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dd12611a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Data Scientist', 'Machine Learning Engineer'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "unique_job_titles = {'Data Scientist', 'Data Analyst', 'Machine Learning Engineer'}"
+    "unique_job_titles = {'Data Scientist', 'Data Analyst', 'Machine Learning Engineer'}\n",
+    "unique_job_titles.remove('Data Analyst')\n",
+    "print(unique_job_titles)"
    ]
   },
   {
@@ -74,13 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fd7983e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Austin', 'New York', 'San Francisco'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_locations = ['New York', 'San Francisco', 'New York', 'Austin', 'San Francisco']"
+    "job_locations = ['New York', 'San Francisco', 'New York', 'Austin', 'San Francisco']\n",
+    "set(job_locations)"
    ]
   },
   {
@@ -101,14 +133,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "75ba0d0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Machine Learning', 'Python', 'SQL', 'Tableau', 'R'}\n",
+      "{'Python', 'SQL', 'Tableau'}\n",
+      "{'Machine Learning', 'Python', 'SQL', 'Tableau', 'R'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "skills_set1 = {'Python', 'SQL', 'Tableau'}\n",
-    "skills_set2 = {'R', 'SQL', 'Machine Learning'}"
+    "skills_set2 = {'R', 'SQL', 'Machine Learning'}\n",
+    "print(skills_set1.union(skills_set2))\n",
+    "print(skills_set1)\n",
+    "skills_set1.update(skills_set2)\n",
+    "print(skills_set1)\n"
    ]
   },
   {
@@ -120,7 +166,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
