--- a/4_Problems/1_11_Tuples.ipynb
+++ b/4_Problems/1_11_Tuples.ipynb
@@ -20,13 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1d281195",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Analyst\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_roles = ('Data Scientist', 'Data Analyst', 'Machine Learning Engineer')"
+    "job_roles = ('Data Scientist', 'Data Analyst', 'Machine Learning Engineer')\n",
+    "print(job_roles[1])"
    ]
   },
   {
@@ -47,13 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3c540847",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Data Scientist', 'Data Analyst', 'Machine Learning Engineer', 'AI Specialist')\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_roles = ('Data Scientist', 'Data Analyst', 'Machine Learning Engineer')"
+    "job_roles = ('Data Scientist', 'Data Analyst', 'Machine Learning Engineer')\n",
+    "extended_job_roles=job_roles+('AI Specialist',)\n",
+    "print(extended_job_roles)"
    ]
   },
   {
@@ -77,10 +96,21 @@
    "execution_count": null,
    "id": "0b7cb7af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Data Scientist', 'Machine Learning Engineer')\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_roles = ('Data Scientist', 'Data Analyst', 'Machine Learning Engineer')"
+    "job_roles = ('Data Scientist', 'Data Analyst', 'Machine Learning Engineer')\n",
+    "list_job_roles=list(job_roles)\n",
+    "list_job_roles.remove('Data Analyst')   # 'remove' will remove the item from the list and update the list automatically, so you do not have to =it again\n",
+    "print(tuple(list_job_roles))            # you have to convert the tuple to list at first because the tuple is immutable"
    ]
   },
   {
@@ -104,10 +134,24 @@
    "execution_count": null,
    "id": "bb771d79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "80\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_postings = (120, 80, 50)"
+    "job_postings = (120, 80, 50)\n",
+    "data_scientist_postings,data_analyst_postings,ml_engineer_postings=job_postings   # python has the advantage of assignment mutiplily, it can be applied in tuple, but not sure if it works in list\n",
+    "print(data_scientist_postings)\n",
+    "print(data_analyst_postings)\n",
+    "print(ml_engineer_postings)"
    ]
   },
   {
@@ -128,13 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "704fad1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_details = (('Data Scientist', 120), ('Data Analyst', 80), ('Machine Learning Engineer', 50))"
+    "job_details = (('Data Scientist', 120), ('Data Analyst', 80), ('Machine Learning Engineer', 50))\n",
+    "print(job_details[2][1])"
    ]
   },
   {
@@ -146,7 +199,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
