--- a/4_Problems/1_12_Operators Part 2.ipynb
+++ b/4_Problems/1_12_Operators Part 2.ipynb
@@ -20,14 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "28d20b63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "job_title1 = 'Data Engineer'\n",
-    "job_title2 = 'Data Scientist'"
+    "job_title2 = 'Data Scientist'\n",
+    "id(job_title1)is not id(job_title2)"
    ]
   },
   {
@@ -48,13 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "83716fca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_locations = ['New York', 'San Francisco', 'Austin']"
+    "job_locations = ['New York', 'San Francisco', 'Austin']\n",
+    "if 'New York' in job_locations:\n",
+    "    print(True)\n",
+    "print('New York' in job_locations)"
    ]
   },
   {
@@ -75,14 +99,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cffe612f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "job_title = 'Data Analyst'\n",
-    "job_description = 'Data Scientist at Tech Corp'"
+    "job_description = 'Data Scientist at Tech Corp'\n",
+    "print(job_title not in job_description)\n"
    ]
   },
   {
@@ -103,13 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "66430c97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "print('Data Scientist' and 'Machine Learning Engineer' in job_titles)"
    ]
   },
   {
@@ -133,11 +175,24 @@
    "execution_count": null,
    "id": "c6f178cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116720\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "salary1 = 100000\n",
-    "salary2 = 50000"
+    "salary2 = 50000\n",
+    "print(salary1 | salary2)\n",
+    "# salary1: 11000011010100000  (二进制，17位)\n",
+    "# salary2:  1100001101010000  (二进制，16位，前面补0对齐)\n",
+    "# -----------------------------------\n",
+    "# 结果:    11100011010100000  (二进制)"
    ]
   },
   {
@@ -149,7 +204,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
