--- a/4_Problems/1_13_Loops.ipynb
+++ b/4_Problems/1_13_Loops.ipynb
@@ -20,13 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "45d217e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Scientist\n",
+      "Data Analyst\n",
+      "Machine Learning Engineer\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "for job in job_titles:\n",
+    "    print(job)"
    ]
   },
   {
@@ -47,13 +59,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "038f046a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_postings = [5, 10, 15, 20, 25]"
+    "job_postings = [5, 10, 15, 20, 25]\n",
+    "index=0\n",
+    "sum=0\n",
+    "while index<len(job_postings):\n",
+    "    sum+=job_postings[index]\n",
+    "    index+=1\n",
+    "print(sum)"
    ]
   },
   {
@@ -74,13 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ee175f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Data Scientist\n",
+      "1: Data Analyst\n",
+      "2: Machine Learning Engineer\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer']\n",
+    "for i,job in enumerate(job_titles):\n",
+    "    print(f'{i}: {job}')"
    ]
   },
   {
@@ -101,13 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "724ac1bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Machine Learning Engineer\n",
+      "Machine Learning Engineer\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer', 'Software Engineer']"
+    "job_titles = ['Data Scientist', 'Data Analyst', 'Machine Learning Engineer', 'Software Engineer']\n",
+    "job='Engineer'\n",
+    "index=0\n",
+    "while job not in job_titles[index]:\n",
+    "    index+=1\n",
+    "print(job_titles[index])\n",
+    "\n",
+    "index = 0\n",
+    "while index < len(job_titles):\n",
+    "    if 'Engineer' in job_titles[index]:\n",
+    "        print(job_titles[index])\n",
+    "        break\n",
+    "    index += 1\n"
    ]
   },
   {
@@ -128,17 +187,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c71d29c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The role of Data Scientist, requires proficiency in Python\n",
+      "The role of Data Scientist, requires proficiency in R\n",
+      "The role of Data Analyst, requires proficiency in SQL\n",
+      "The role of Data Analyst, requires proficiency in Excel\n",
+      "The role of Machine Learning Engineer, requires proficiency in Python\n",
+      "The role of Machine Learning Engineer, requires proficiency in TensorFlow\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
     "positions_skills = {\n",
     "    'Data Scientist': ['Python', 'R'],\n",
     "    'Data Analyst': ['SQL', 'Excel'],\n",
     "    'Machine Learning Engineer': ['Python', 'TensorFlow']\n",
-    "}"
+    "}\n",
+    "for position, skills in positions_skills.items():\n",
+    "    for skill in skills:\n",
+    "        print(f'The role of {position}, requires proficiency in {skill}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cd5df4bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Data Scientist', 'Data Analyst', 'Machine Learning Engineer'])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positions_skills.items()\n",
+    "\n",
+    "positions_skills.keys()"
    ]
   },
   {
@@ -148,9 +246,191 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "da45fc19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class dict in module builtins:\n",
+      "\n",
+      "class dict(object)\n",
+      " |  dict() -> new empty dictionary\n",
+      " |  dict(mapping) -> new dictionary initialized from a mapping object's\n",
+      " |      (key, value) pairs\n",
+      " |  dict(iterable) -> new dictionary initialized as if via:\n",
+      " |      d = {}\n",
+      " |      for k, v in iterable:\n",
+      " |          d[k] = v\n",
+      " |  dict(**kwargs) -> new dictionary initialized with the name=value pairs\n",
+      " |      in the keyword argument list.  For example:  dict(one=1, two=2)\n",
+      " |\n",
+      " |  Built-in subclasses:\n",
+      " |      StgDict\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __contains__(self, key, /)\n",
+      " |      True if the dictionary has the specified key, else False.\n",
+      " |\n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |\n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |\n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |\n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |\n",
+      " |  __getitem__(self, key, /)\n",
+      " |      Return self[key].\n",
+      " |\n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |\n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  __ior__(self, value, /)\n",
+      " |      Return self|=value.\n",
+      " |\n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |\n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |\n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |\n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |\n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |\n",
+      " |  __or__(self, value, /)\n",
+      " |      Return self|value.\n",
+      " |\n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |\n",
+      " |  __reversed__(self, /)\n",
+      " |      Return a reverse iterator over the dict keys.\n",
+      " |\n",
+      " |  __ror__(self, value, /)\n",
+      " |      Return value|self.\n",
+      " |\n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |\n",
+      " |  __sizeof__(...)\n",
+      " |      D.__sizeof__() -> size of D in memory, in bytes\n",
+      " |\n",
+      " |  clear(...)\n",
+      " |      D.clear() -> None.  Remove all items from D.\n",
+      " |\n",
+      " |  copy(...)\n",
+      " |      D.copy() -> a shallow copy of D\n",
+      " |\n",
+      " |  get(self, key, default=None, /)\n",
+      " |      Return the value for key if key is in the dictionary, else default.\n",
+      " |\n",
+      " |  items(...)\n",
+      " |      D.items() -> a set-like object providing a view on D's items\n",
+      " |\n",
+      " |  keys(...)\n",
+      " |      D.keys() -> a set-like object providing a view on D's keys\n",
+      " |\n",
+      " |  pop(...)\n",
+      " |      D.pop(k[,d]) -> v, remove specified key and return the corresponding value.\n",
+      " |\n",
+      " |      If the key is not found, return the default if given; otherwise,\n",
+      " |      raise a KeyError.\n",
+      " |\n",
+      " |  popitem(self, /)\n",
+      " |      Remove and return a (key, value) pair as a 2-tuple.\n",
+      " |\n",
+      " |      Pairs are returned in LIFO (last-in, first-out) order.\n",
+      " |      Raises KeyError if the dict is empty.\n",
+      " |\n",
+      " |  setdefault(self, key, default=None, /)\n",
+      " |      Insert key with a value of default if key is not in the dictionary.\n",
+      " |\n",
+      " |      Return the value for key if key is in the dictionary, else default.\n",
+      " |\n",
+      " |  update(...)\n",
+      " |      D.update([E, ]**F) -> None.  Update D from dict/iterable E and F.\n",
+      " |      If E is present and has a .keys() method, then does:  for k in E: D[k] = E[k]\n",
+      " |      If E is present and lacks a .keys() method, then does:  for k, v in E: D[k] = v\n",
+      " |      In either case, this is followed by: for k in F:  D[k] = F[k]\n",
+      " |\n",
+      " |  values(...)\n",
+      " |      D.values() -> an object providing a view on D's values\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
+      " |\n",
+      " |  __class_getitem__(...)\n",
+      " |      See PEP 585\n",
+      " |\n",
+      " |  fromkeys(iterable, value=None, /)\n",
+      " |      Create a new dictionary with keys from iterable and values set to value.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |\n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |\n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd1d3d36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
