--- a/4_Problems/1_26_Pandas Analysis.ipynb
+++ b/4_Problems/1_26_Pandas Analysis.ipynb
@@ -12,10 +12,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eefc52a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: datasets in /opt/anaconda3/lib/python3.12/site-packages (3.6.0)\n",
+      "\u001b[33mWARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1047c9010>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/datasets/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1047bfd40>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/datasets/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1047beb40>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/datasets/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1047a4dd0>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/datasets/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1047a7800>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/datasets/\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: filelock in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (3.13.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (1.26.4)\n",
+      "Requirement already satisfied: pyarrow>=15.0.0 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (16.1.0)\n",
+      "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (0.3.8)\n",
+      "Requirement already satisfied: pandas in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (2.2.2)\n",
+      "Requirement already satisfied: requests>=2.32.2 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (2.32.3)\n",
+      "Requirement already satisfied: tqdm>=4.66.3 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (4.66.5)\n",
+      "Requirement already satisfied: xxhash in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (3.5.0)\n",
+      "Requirement already satisfied: multiprocess<0.70.17 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (0.70.16)\n",
+      "Requirement already satisfied: fsspec<=2025.3.0,>=2023.1.0 in /opt/anaconda3/lib/python3.12/site-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2024.6.1)\n",
+      "Requirement already satisfied: huggingface-hub>=0.24.0 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (0.32.4)\n",
+      "Requirement already satisfied: packaging in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (24.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /opt/anaconda3/lib/python3.12/site-packages (from datasets) (6.0.1)\n",
+      "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /opt/anaconda3/lib/python3.12/site-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (3.10.5)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/anaconda3/lib/python3.12/site-packages (from huggingface-hub>=0.24.0->datasets) (4.13.2)\n",
+      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.2 in /opt/anaconda3/lib/python3.12/site-packages (from huggingface-hub>=0.24.0->datasets) (1.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.32.2->datasets) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.32.2->datasets) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.32.2->datasets) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.32.2->datasets) (2025.4.26)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/anaconda3/lib/python3.12/site-packages (from pandas->datasets) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas->datasets) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/lib/python3.12/site-packages (from pandas->datasets) (2023.3)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /opt/anaconda3/lib/python3.12/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2.4.0)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/anaconda3/lib/python3.12/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.2.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /opt/anaconda3/lib/python3.12/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (25.3.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /opt/anaconda3/lib/python3.12/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.4.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/anaconda3/lib/python3.12/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (6.0.4)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/anaconda3/lib/python3.12/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.11.0)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using the latest cached version of the dataset since lukebarousse/data_jobs couldn't be found on the Hugging Face Hub\n",
+      "Found the latest cached dataset configuration 'default' at /Users/DingYi/.cache/huggingface/datasets/lukebarousse___data_jobs/default/0.0.0/ed776e5a0a8c40ea9d5efbd800772ae52e140f3e (last modified on Mon Jun  9 15:29:49 2025).\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -U datasets\n",
     "import pandas as pd\n",
@@ -47,7 +98,31 @@
    "id": "d9f8a257",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Problem Statement:\n",
+    "Calculate the mean of the salary_year_avg column and display the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef0d5e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123286.27407182401"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['salary_year_avg'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +146,31 @@
    "id": "db0c7fc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Problem Statement:\n",
+    "Calculate the median of the salary_year_avg column and display the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "03bada50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115000.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['salary_year_avg'].median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +194,42 @@
    "id": "92477f78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Problem Statement:\n",
+    "Group the DataFrame by job_title_short and calculate the average salary_hour_avg for each job title. Display the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8c00f4e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_title_short\n",
+       "Business Analyst             42.723415\n",
+       "Cloud Engineer               45.560715\n",
+       "Data Analyst                 38.106918\n",
+       "Data Engineer                57.196998\n",
+       "Data Scientist               49.361403\n",
+       "Machine Learning Engineer    48.477935\n",
+       "Senior Data Analyst          47.661218\n",
+       "Senior Data Engineer         62.848496\n",
+       "Senior Data Scientist        54.105631\n",
+       "Software Engineer            46.452019\n",
+       "Name: salary_hour_avg, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('job_title_short')['salary_hour_avg'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +253,34 @@
    "id": "0692c4b3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Problem Statement:\n",
+    "Find the job title with the lowest average hourly salary and display the job title and the salary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e3404ee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_title_short    Data Scientist\n",
+       "salary_hour_avg               8.0\n",
+       "Name: 88185, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_salary=df['salary_hour_avg'].idxmin()\n",
+    "df.iloc[min_salary][['job_title_short','salary_hour_avg']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +304,43 @@
    "id": "d89edae3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Problem Statement:\n",
+    "Group the DataFrame by job_country and calculate the total number of job postings for each country. Display the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "49826e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_country\n",
+       "Afghanistan      16\n",
+       "Albania         119\n",
+       "Algeria         111\n",
+       "Angola           11\n",
+       "Argentina      8736\n",
+       "               ... \n",
+       "Venezuela        69\n",
+       "Vietnam        2414\n",
+       "Yemen            10\n",
+       "Zambia          104\n",
+       "Zimbabwe         81\n",
+       "Length: 160, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('job_country').size()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_course",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
