--- a/4_Problems/1_22_NumPy.ipynb
+++ b/4_Problems/1_22_NumPy.ipynb
@@ -20,13 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3b7e6275",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 15  7 20 25 30  5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "applications_list = [10, 15, 7, 20, 25, 30, 5]"
+    "# Problem Statement:\n",
+    "# Create a NumPy array representing the number of job applications received each day for a week (7 days). \n",
+    "# The array should be called applications and contain the following numbers: [10, 15, 7, 20, 25, 30, 5]. Print the array.\n",
+    "import numpy as np\n",
+    "\n",
+    "applications_list = [10, 15, 7, 20, 25, 30, 5]\n",
+    "print(np.array(applications_list))"
    ]
   },
   {
@@ -47,13 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a3f8f040",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 15  7]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "postings_list = [10, 15, 7, 20, 25, 30, 5]"
+    "# Problem Statement:\n",
+    "# Create a NumPy array representing the number of job postings for different job titles called postings. \n",
+    "# The array contains [10, 15, 7, 20, 25, 30, 5]. Use slicing to get the number of postings for the first three job titles.\n",
+    "import numpy as np\n",
+    "\n",
+    "postings_list = [10, 15, 7, 20, 25, 30, 5]\n",
+    "print(np.array(postings_list)[:3])"
    ]
   },
   {
@@ -74,13 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b62f9aed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max=95000, min=60000\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Needed\n",
-    "salaries_list = [70000, 85000, 60000, 95000, 80000]"
+    "# Problem Statement:\n",
+    "# Create a NumPy array representing the salaries called salaries offered for five different job positions. \n",
+    "# Calculate the highest and lowest salary using NumPy functions. The array salaries contains [70000, 85000, 60000, 95000, 80000].\n",
+    "import numpy as np\n",
+    "salaries_list = [70000, 85000, 60000, 95000, 80000]\n",
+    "np_salaries=np.array(salaries_list)\n",
+    "print(f'max={np.max(np_salaries)}, min={np.min(np_salaries)}')"
    ]
   },
   {
@@ -93,8 +135,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
